config-sample-files/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echo-deployment
  namespace: demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: echo
  template:
    metadata:
      labels:
        app: echo
    spec:
      containers:
      - name: echo
        image: hashicorp/http-echo:0.2.3
        args:
          - "-text=$(APP_MESSAGE)"           # use our ConfigMap
        ports:
          - containerPort: 5678
        volumeMounts:
          - name: log-volume
            mountPath: /logs
      volumes:
      - name: log-volume                   # mount our PVC
        persistentVolumeClaim:
          claimName: app-pvc
