config-sample-files/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-service
  namespace: demo
spec:
  selector:
    app: echo
  ports:
    - port: 80
      targetPort: 5678
  type: ClusterIP
